<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/viewToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/blue"/>

    <ImageView
        android:id="@+id/viewBackArrow"
        android:src="@drawable/back"
        android:contentDescription="@string/back"
        app:tint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/viewToolbar"
        app:layout_constraintStart_toStartOf="@id/viewToolbar"
        app:layout_constraintBottom_toBottomOf="@id/viewToolbar"
        android:layout_marginStart="35dp"/>

    <TextView
        android:id="@+id/viewEditContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/viewToolbar"
        app:layout_constraintStart_toEndOf="@id/viewBackArrow"
        app:layout_constraintBottom_toBottomOf="@id/viewToolbar"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/add_phone_contact"
        android:layout_marginStart="50dp"/>

    <RadioButton
        android:id="@+id/viewPhoneNumberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:buttonTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewToolbar"
        app:layout_constraintBottom_toTopOf="@id/viewEmailButton"
        android:layout_marginStart="35dp"/>

    <TextView
        android:id="@+id/viewPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/viewPhoneNumberButton"
        app:layout_constraintTop_toBottomOf="@id/viewToolbar"
        app:layout_constraintBottom_toTopOf="@id/viewEmail"
        android:text="@string/phone_number"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"/>

    <RadioButton
        android:id="@+id/viewEmailButton"
        android:clickable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPhoneNumberButton"
        app:layout_constraintBottom_toTopOf="@id/viewItemName"
        android:layout_marginStart="35dp"/>

    <TextView
        android:id="@+id/viewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/viewEmailButton"
        app:layout_constraintTop_toBottomOf="@id/viewPhoneNumber"
        app:layout_constraintBottom_toTopOf="@id/viewItemName"
        android:text="@string/email"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/viewItemName"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/viewItemPhoneNumber"
        app:layout_constraintTop_toBottomOf="@id/viewEmailButton"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/name"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"/>

    <EditText
        android:id="@+id/viewItemPhoneNumber"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/viewItemName"
        app:layout_constraintBottom_toTopOf="@id/viewButtonAdd"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/phone_number"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"/>

    <Button
        android:id="@+id/viewButtonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/viewItemPhoneNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:text="@string/add"
        android:textSize="15sp"
        android:background="@drawable/remove_background"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>